k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-dashboard
  namespace: ci-dashboard
  labels:
    app: ci-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ci-dashboard
  template:
    metadata:
      labels:
        app: ci-dashboard
    spec:
      serviceAccountName: ci-dashboard
      containers:
        - name: ci-dashboard
          image: sabichon/ci-dashboard:23
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
